# flume-data-pipeline

./: .funcignore  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: build.yml  deploy.yml  python-app.yml
Common/: scheduling.py  telemetry_message.py
DataPipelineFunctions/: requirements.txt
DataPipelineFunctions/Common/: queue_summary.py  scheduling.py  summary.py  time_utils.py  timer_request.py
DataPipelineFunctions/InsertSummary/: function.json  insert_summary.py
DataPipelineFunctions/InsertTelemetry/: function.json  insert_telemetry.py
DataPipelineFunctions/InsertTelemetryAggregate/: function.json
DataPipelineFunctions/QueueDailySummary/: function.json  queue_daily_summary.py
DataPipelineFunctions/QueueWeeklySummary/: function.json  queue_weekly_summary.py
DataPipelineTests/: test_requirements.txt
DataPipelineTests/Common/: test_time_utils.py
InsertSummary/: function.json  insert_summary.py
InsertTelemetry/: example_telemetry.json  function.json  insert_telemetry.py  test_update_telemetry.py
InsertTelemetryAggregate/: function.json  insert_telemetry_aggregate.py
QueueDailySummary/: function.json  queue_daily_summary.py
QueueHourlySummary/: function.json  queue_hourly_summary.py
QueueWeeklySummary/: function.json  queue_weekly_summary.py
ScheduleTelemetryAggregate/: schedule_telemetry_aggregate.py
configs/: mypy_plugin.py
dev/: setup_dev  setup_dev.bat
flume/: requirements.txt
main/: requirements.txt
test/: test_requirements.txt
(+74 files in other folders)
