[tool.poetry]
name = "flume"
version = "0.1.0"
description = "Azure serverless data pipeline for the Log Cabin project"
authors = ["Finn Welsford-Ackroyd <finnwa24@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
azure-functions = "^1.7.0"
cabin = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
